maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:32: error: '=' expected but '(' found.
def listVoisins(x:Int,y:Int, xMax:Int, yMax:Int, num:Int):List(int,int)= {
                                                              ^ShortestPathMaze:53: error: illegal start of simple expression
def numerote(x:Int,y:Int,num:Int, xMax:Int, yMax:Int) {
^